# CPT208-GradHelper

./: .gitignore  KnowledgeBase.vue  README.md  index.html  package-lock.json  package.json  vite.config.js  一键启动.bat
.github/workflows/: deploy.yml
backend/: data.js  pyproject.toml  server.js
backend/AI_assistant/: app.py  assistant.db
backend/IELTS/: .env.example  Python API _ RAGFlow.html  app.py  pyproject.toml  start_backend.bat
backend/service/: llm_talk.py
docs/: BACKEND_API_CONTRACT.md
rag_backend/: CPT208_minimal_manual.md  CPT208_stage1_api.md  CPT208_stage2_api.md  CPT208_stage3_api.md  CPT208_stage4_api.md  CPT208_stage5_api.md  CPT208_stage6_api.md  RAGflow_python_api_reference.txt  README.md  WEB_VALIDATION_STEPS.md
rag_backend/app/: main.py
rag_backend/app/api/: chat.py  knowledge.py  upload.py
rag_backend/app/core/: config.py  errors.py  logging.py  request_logging.py
rag_backend/app/repositories/: kb_repository.py
rag_backend/app/schemas/: chat.py  knowledge.py  retrieval.py  upload.py
rag_backend/app/services/: document_status_service.py  ingestion_service.py  llm_service.py  rag_pipeline.py  ragflow_client.py  retrieval_service.py
rag_backend/docs/: api_contract.md  ragflow_mapping.md
rag_backend/service/: 11.py  dataset_manegment.py
rag_backend/tests/: test_chat_rag.py  test_retrieval.py  test_upload.py
src/: main.js  style.css
src/router/: index.js
src/views/: AIChat.vue  AppInterface.vue  DetailView.vue  GpaCalculator.vue  IeltsAssistant.vue  Intro.vue  KnowledgeBase.vue  testassistant.vue
(+3 files in other folders)
